--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div id="stampa"></div>
+
+
+
+
     <script src="js/script.js"></script>
 </body>
 </html>
